src/annotator/snapshots/jsonschema_annotator__annotator__toml__tests__deeply_nested.snap
---
source: src/annotator/toml.rs
expression: result
---
# Database
[database]
# Connection Settings
[database.connection]
# Host
# Database server hostname
host = "localhost"
# Port
port = 5432
