src/annotator/snapshots/jsonschema_annotator__annotator__toml__tests__include_default_value.snap
---
source: src/annotator/toml.rs
expression: result
---
# Port
# The port number
# Default: 3000
port = 8080
