src/annotator/snapshots/jsonschema_annotator__annotator__toml__tests__nested_table.snap
---
source: src/annotator/toml.rs
expression: result
---
# Server Config
[server]
# Port
# The port to listen on
port = 8080
# Host
host = "localhost"
