src/annotator/snapshots/jsonschema_annotator__annotator__toml__tests__skip_existing_comments.snap
---
source: src/annotator/toml.rs
expression: result
---
# Existing comment
port = 8080
# Host
host = "localhost"
